data/derived/fa15/progs/unify/prog4073.ml.out
Characters 47-48:
  let _ = eval (Smallest(VarX, VarY, Neg(VarX)), 1, 2);;
                                                 ^
Error: This expression has type int but an expression was expected of type
         float
